# PythonWebsite

./: .gitignore  Makefile  app.py  bigQuery.py  build.sh  env_loader.py  mydt.py  pyproject.toml  reactiveCharting.py  render.yaml  requirements.txt  script.py  setup.bat  simplemodel.py  url_config.py
datasets/: data-export - 2.csv  data-export - 3.csv  data-export.csv
markdown_files/: big_query.md  content.md  customer_clustering.md  cv.md  fixed_navbar.md  flask_post_graphs.md  graphs.html  index_match_sumif.md  k_nearest.md  markdownFlaskFile.md  xlookup.md
static/css/: all_pages.css  genericpage.css  hero_image.css  home.css  markdown_style.css  navbar.css  notebox.css  tables.css  text_scroll.css  tutorial_list_home.css  tutorial_page.css
static/javascript/: mixpanel.js
static/site_libs/: chart.js
templates/: cv.html  input.html  login.html  plot.html  regpredweb.html
templates/Essential_Templates/: base_head.html  base_nav.html  base_tutorial.html
templates/Learn_R/: r_basics.html
templates/data_analysis/: bigQueryQuery.html
templates/data_science/: custclust.html  decision_tree.html  k_nearest.html
templates/gsheets/: base_excel_tutorial.html  gs_home.html  gs_index_match_sumifs.html  gs_xlookup_vs.html  gsheets_functions_if.html  gsheets_functions_or_and.html
templates/navigation/: home.html  tutorial_list_home.html
templates/old_projects/: bankingchurn.html  covidtableaupublic.html  shiny_dash.html  walmart_analysis.html
templates/portfolio_website/: pw_css_code.html  pw_flask_code.html  (+4 more)
utils/: chart_generator.py  data_loader.py
(+9 files in other folders)
