[project]
name = "python-website"
version = "0.1.0"
description = "Flask website with data science tutorials and portfolio content"
requires-python = ">=3.9"
dependencies = [
    "flask==2.0.2",
    "gunicorn==20.1.0",
    "werkzeug==2.0.2",
    "markdown==3.3.0",
    "plotly>=5.0.0",
    "flask-login>=0.6.3",
    "flask-dance>=5.1.0",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
] 
